# seis-proc-dl

./: .gitignore  pyproject.toml  setup.py
seis_proc_dl/apply_to_continuous/: apply_detectors.py  apply_swag_pickers.py  assoc_loc_io.py  database_connector.py  make_month_list.py  make_stat_list.py  make_stat_list_db.py  run_apply_detector.py  run_picker.py
seis_proc_dl/apply_to_continuous/example_scripts/: ben_ex.py  run_dets_slurm.sh  run_dets_slurm_1c.sh
seis_proc_dl/pytests/: test_apply_detectors_unit.py  test_apply_swag_pickers.py  test_database_connector.py
seis_proc_dl/pytests/example_files/repicker_test_exs/: normalize_noise.py
seis_proc_dl/pytests/repicker_slurm/: compare_ngb_preds.py  compare_noise_preds.py  run_slurm.sh  run_slurm_db.sh  test_apply_swag_pickers_db.py  test_apply_swag_pickers_nodb.py
seis_proc_dl/utils/: config_apply_detectors.py
